--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "Jellyfin",
-    "id": "jellyfin",
+    "name": "OpenTracker",
+    "id": "opentracker",
     "packaging_format": 1,
     "description": {
-        "en": "Jellyfin package for YunoHost.",
-        "fr": "Jellyfin pour YunoHost."
+        "en": "OpenTracker package for YunoHost.",
+        "fr": "OpenTracker pour YunoHost."
     },
-    "version": "10.2.2",
-    "url": "https://github.com/jellyfin/jellyfin",
-    "license": "GPL-2.0",
+    "version": "2019",
+    "url": "http://erdgeist.org/arts/software/opentracker/",
+    "license": "Beerware",
     "maintainer": {
         "name": "liberodark",
         "email": "liberodark@gmail.com"
@@ -27,8 +27,8 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for Jellyfin",
-                    "fr": "Choisissez un nom de domaine pour Jellyfin"
+                    "en": "Choose a domain name for OpenTracker",
+                    "fr": "Choisissez un nom de domaine pour OpenTracker"
                 },
                 "example": "example.com"
             },
@@ -37,11 +37,11 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for Jellyfin /jelly is accepted",
-                    "fr": "Choisissez un chemin pour Jellyfin /jelly est accepté"
+                    "en": "Choose a path for OpenTracker /opt is accepted",
+                    "fr": "Choisissez un chemin pour OpenTracker /opt est accepté"
                 },
-                "example": "/jelly",
-                "default": "/jelly"
+                "example": "/opt",
+                "default": "/opt"
             },
             
             {
