--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "opentracker",
     "packaging_format": 1,
     "description": {
-        "en": "OpenTracker package for YunoHost.",
-        "fr": "OpenTracker pour YunoHost."
+        "en": "Bittorrent tracker",
+        "fr": "Tracker Bittorrent"
     },
     "version": "2019",
     "url": "http://erdgeist.org/arts/software/opentracker/",
@@ -14,13 +14,11 @@
         "email": "liberodark@gmail.com"
     },
     "requirements": {
-        "yunohost": ">= 2.7.2"
+        "yunohost": ">= 3.8.1"
     },
     "multi_instance": false,
     "services": [
-        "nginx",
-        "php5-fpm",
-        "mysql"
+        "nginx"
     ],
     "arguments": {
         "install": [{
@@ -32,26 +30,24 @@
                 },
                 "example": "example.com"
             },
-
             {
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for OpenTracker /opt is accepted",
-                    "fr": "Choisissez un chemin pour OpenTracker /opt est accepté"
+                    "en": "Choose a path for OpenTracker",
+                    "fr": "Choisissez un chemin pour OpenTracker"
                 },
-                "example": "/opt",
-                "default": "/opt"
+                "example": "/opentracker",
+                "default": "/opentracker"
             },
-            
             {
                 "name": "is_public",
                 "type": "boolean",
                 "ask": {
-                    "en": "Is it a public site ?",
+                    "en": "Is it a public site?",
                     "fr": "Est-ce un site public ?"
                 },
-                "default": "true"
+                "default": true
             }
         ]
     }
