--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "en": "Bittorrent tracker",
         "fr": "Tracker Bittorrent"
     },
-    "version": "2019",
+    "version": "1.0~ynh1",
     "url": "http://erdgeist.org/arts/software/opentracker/",
     "license": "Beerware",
     "maintainer": {
