--- a/manifest.json
+++ b/manifest.json
@@ -21,15 +21,7 @@
         "nginx"
     ],
     "arguments": {
-        "install": [{
-                "name": "domain",
-                "type": "domain",
-                "ask": {
-                    "en": "Choose a domain name for OpenTracker",
-                    "fr": "Choisissez un nom de domaine pour OpenTracker"
-                },
-                "example": "example.com"
-            }
+        "install": [
         ]
     }
 }
